# kspir

./: .cursorrules  .gitignore  CMakeLists.txt  PIR_代码库分析任务.md  README.md  paper_summary.md
cmake/: compile_options.cmake  dependencies.cmake
src/: CMakeLists.txt  answer.cpp  answer.h  constants.cpp  constants.h  crt.cpp  crt.h  encrypt.cpp  encrypt.h  lwe.cpp  lwe.h  ntt.cpp  ntt.h  params.h  pir.h  query.cpp  query.h  recover.cpp  recover.h  samples.cpp  samples.h  secret.cpp  secret.h  twosteps.cpp  twosteps.h  utils.cpp  utils.h
tests/: CMakeLists.txt  README.md  test-avx2.cpp  test-avx512.cpp  test-bsgs-matrix-mul.cpp  test-dummy-data.cpp  test-expand.cpp  test-fft.cpp  test-first-construction.cpp  test-first-dimension.cpp  test-larger-database.cpp  test-multi.cpp  test-ntt-speed.cpp  test-ntt.cpp  test-packing-lwes.cpp  test-pir-string.cpp  test-pir.cpp  test-setup.cpp  test-two-dimensions.cpp  test-two-steps-key.cpp  test-two-steps.cpp  test-utils.cpp  test_ntt_index.cpp  timer.h
